--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -27,4 +27,4 @@ jobs:
         id: determine_version
         run: |
           latest_version=${{ env.latest_version }}
-          echo "${current_version}"
+          echo "${latest_version}"
