--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -34,6 +34,19 @@ jobs:
           latest_version=${latest_tag#v}  # Remove 'v' prefix if it exists
           echo "latest_version=${latest_version}" >> $GITHUB_ENV
 
+      - name: Validate manual version input
+        if: ${{ github.event.inputs.release_type == 'Manually Specified' }}
+        run: |
+          if [ -z "${{ github.event.inputs.manual_version }}" ]; then
+            echo "Error: Manual version number must be provided when selecting 'Manually Specified'."
+            exit 1
+          fi
+
+          if [[ ! "${{ github.event.inputs.manual_version }}" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            echo "Error: Version number must be in the vX.X.X format."
+            exit 1
+          fi
+
       - name: Determine new version
         id: determine_version
         run: |
