--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -117,3 +117,12 @@ jobs:
           {
             print
           }' CHANGELOG.md.bak > CHANGELOG.md
+
+      - name: Commit changes
+        run: |
+          git add CHANGELOG.md
+          git commit -m "Updates CHANGELOG for ${{ env.new_version }} release"
+
+      - name: Push changes
+        run: |
+          git push origin release/${{ env.new_version }}
