--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -80,6 +80,11 @@ jobs:
           echo "new_version=v${new_version}" >> $GITHUB_ENV
           echo "New version is ${new_version}"
 
+      - name: Set up Git
+        run: |
+          git config --global user.name 'github-actions'
+          git config --global user.email 'github-actions@github.com'
+
       - name: Create release branch
         run: |
           git checkout -b release/${{ env.new_version }} develop
