--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -140,3 +140,14 @@ jobs:
       - name: Push changes
         run: |
           git push origin release/${{ env.new_version }}
+
+      - name: Create pull request
+        uses: octokit/request-action@v2
+        with:
+          route: POST /repos/{owner}/{repo}/pulls
+          owner: ${{ github.repository_owner }}
+          repo: ${{ github.repository }}
+          title: "Release ${{ env.new_version }}"
+          head: release/${{ env.new_version }}
+          base: main
+          body: "This PR is to merge the release branch into main for version ${{ env.new_version }}."
