--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -142,14 +142,11 @@ jobs:
           git push origin release/${{ env.new_version }}
 
       - name: Create pull request
-        uses: octokit/request-action@v2.x
-        with:
-          route: POST /repos/{owner}/{repo}/pulls
-          owner: ${{ github.repository_owner }}
-          repo: ${{ github.repository }}
-          title: "Release ${{ env.new_version }}"
-          head: release/${{ env.new_version }}
-          base: main
-          body: "This PR is to merge the release branch into main for version ${{ env.new_version }}."
+        run: |
+          gh pr create \
+            --base main \
+            --head release/${{ env.new_version }} \
+            --title "Release ${{ env.new_version }}" \
+            --body "This PR is to merge the release branch into main for version ${{ env.new_version }}."
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
