--- a/.github/workflows/start_release.yml
+++ b/.github/workflows/start_release.yml
@@ -82,8 +82,8 @@ jobs:
 
       - name: Set up Git
         run: |
-          git config --global user.name 'github-actions'
-          git config --global user.email 'github-actions@github.com'
+          git config --global user.name "${GITHUB_ACTOR}"
+          git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
 
       - name: Create release branch
         run: |
