--- a/.github/workflows/start_release.yml
+++ b/.github/workflows/start_release.yml
@@ -83,7 +83,7 @@ jobs:
       - name: Set up Git
         run: |
           git config --global user.name "${GITHUB_ACTOR}"
-          git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+          git config --global user.email "${GITHUB_ACTOR_ID}+${GITHUB_ACTOR}@users.noreply.github.com"
 
       - name: Create release branch
         run: |
