--- a/.github/workflows/finalize_release.yml
+++ b/.github/workflows/finalize_release.yml
@@ -1,10 +1,9 @@
 name: Finalize Release
 
 on:
-  pull_request:
+  push:
     branches:
-      - "develop"
-    types: [opened, reopened, synchronize]
+      - develop
 
 jobs:
   finalize_release:
