--- a/.github/workflows/finalize_release.yml
+++ b/.github/workflows/finalize_release.yml
@@ -3,7 +3,7 @@ name: Finalize Release
 on:
   push:
     branches:
-      - develop
+      - main
 
 jobs:
   finalize-release:
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout Main Branch
         uses: actions/checkout@v4
         with:
-          ref: develop
+          ref: main
 
       - name: Extract release branch and version
         id: extract_release_info
