--- a/.github/workflows/finalize_release.yml
+++ b/.github/workflows/finalize_release.yml
@@ -83,7 +83,7 @@ jobs:
       - name: Tag new version
         run: |
           git tag -a "${{ env.new_version }}" -m "Release version ${{ env.new_version }}"
-          git push origin "${{ env.new_version }}"
+          git push origin "${{ env.new_version }}" -f
 
       - name: Get Release Notes
         run: |
