--- a/.github/workflows/finalize_release.yml
+++ b/.github/workflows/finalize_release.yml
@@ -87,7 +87,7 @@ jobs:
 
       - name: Get Release Notes
         run: |
-          awk '/^## \[v1.0.0\]/ {flag=1; next} /^## \[/{if (flag) exit} flag {print $0}' CHANGELOG.md >> tmp_changelog.md
+          awk '/^## \[${{ env.new_version }}\]/ {flag=1; next} /^## \[/{if (flag) exit} flag {print $0}' CHANGELOG.md >> tmp_changelog.md
 
       - name: Create GitHub Release
         run: |
