--- a/.github/workflows/finalize_release.yml
+++ b/.github/workflows/finalize_release.yml
@@ -86,6 +86,7 @@ jobs:
           git push origin "${{ env.new_version }}" -f
 
       - name: Get Release Notes
+        id: get_release_notes
         run: |
           awk '/^## \[${{ env.new_version }}\]/ {flag=1; next} /^## \[/{if (flag) exit} flag {print $0}' CHANGELOG.md >> tmp_changelog.md
 
