--- a/.github/workflows/start_release.yml
+++ b/.github/workflows/start_release.yml
@@ -34,6 +34,16 @@ jobs:
           latest_version=${latest_tag#v}
           echo "latest_version=${latest_version}" >> $GITHUB_ENV
 
+      - name: Get release type prefix
+        run: |
+          branch_prefix="release"
+
+          if [ "${{ github.event.inputs.release_type }}" = "Patch" ]; then
+            branch_prefix="hotfix"
+          fi
+
+          echo "branch_prefix=${branch_prefix}" >> $GITHUB_ENV
+
       - name: Validate manual version input
         if: ${{ github.event.inputs.release_type == 'Manually Specified' }}
         run: |
@@ -85,10 +95,16 @@ jobs:
           git config --global user.name "${GITHUB_ACTOR}"
           git config --global user.email "${GITHUB_ACTOR_ID}+${GITHUB_ACTOR}@users.noreply.github.com"
 
-      - name: Create release branch
+      - name: Create Branch
         run: |
-          git checkout -b release/${{ env.new_version }} develop
-          git push origin release/${{ env.new_version }}
+          base_branch="develop"
+
+          if [ "${{ github.event.inputs.release_type }}" = "Patch" ]; then
+            base_branch="main"
+          fi
+
+          git checkout -b ${{ env.branch_prefix }}/${{ env.new_version }} ${base_branch}
+          git push origin ${{ env.branch_prefix }}/${{ env.new_version }}
 
       - name: Update CHANGELOG
         run: |
@@ -139,14 +155,14 @@ jobs:
 
       - name: Push changes
         run: |
-          git push origin release/${{ env.new_version }}
+          git push origin ${{ env.branch_prefix }}/${{ env.new_version }}
 
       - name: Create pull request
         run: |
           gh pr create \
             --base main \
-            --head release/${{ env.new_version }} \
+            --head ${{ env.branch_prefix }}/${{ env.new_version }} \
             --title "Release ${{ env.new_version }}" \
-            --body "This PR is to merge the release branch into main for version ${{ env.new_version }}."
+            --body "This PR is to merge the ${{ env.branch_prefix }} branch into main for version ${{ env.new_version }}."
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
