--- a/.github/workflows/finalize_release.yml
+++ b/.github/workflows/finalize_release.yml
@@ -25,7 +25,7 @@ permissions:
   statuses: write
 
 jobs:
-  finalize-release:
+  finalize_release:
     runs-on: ubuntu-latest
     steps:
       - name: Validate PR URL
