--- a/.github/workflows/finalize_release.yml
+++ b/.github/workflows/finalize_release.yml
@@ -82,14 +82,14 @@ jobs:
       - name: Get Release Notes
         id: get_release_notes
         run: |
-          awk '/^## \[${{ env.new_version }}\]/ {flag=1; next} /^## \[/{if (flag) exit} flag {print $0}' CHANGELOG.md >> tmp_changelog.md
-          sleep 10
+          release_notes=$(awk '/^## \[${{ env.new_version }}\]/ {flag=1; next} /^## \[/{if (flag) exit} flag {print $0}' CHANGELOG.md)
+          echo "release_notes=$release_notes" >> $GITHUB_ENV
 
       - name: Create GitHub Release
         run: |
           gh release create "${{ env.new_version }}" \
             --title "${{ env.new_version }}" \
-            --notes-file tmp_changelog.md \
+            --notes "${{ env.release_notes }}" \
             --latest \
             --target main
         env:
