--- a/.github/workflows/finalize_release.yml
+++ b/.github/workflows/finalize_release.yml
@@ -82,6 +82,7 @@ jobs:
       - name: Get Release Notes
         id: get_release_notes
         run: |
+          git pull
           release_notes=$(awk '/^## \[${{ env.new_version }}\]/ {flag=1; next} /^## \[/{if (flag) exit} flag {print $0}' CHANGELOG.md)
           echo "release_notes=$release_notes" >> $GITHUB_ENV
 
