--- a/.github/workflows/finalize_release.yml
+++ b/.github/workflows/finalize_release.yml
@@ -83,14 +83,13 @@ jobs:
         id: get_release_notes
         run: |
           git pull
-          release_notes=$(awk '/^## \[${{ env.new_version }}\]/ {flag=1; next} /^## \[/{if (flag) exit} flag {print $0}' CHANGELOG.md)
-          echo "release_notes=$release_notes" >> $GITHUB_ENV
+          awk '/^## \[${{ env.new_version }}\]/ {flag=1; next} /^## \[/{if (flag) exit} flag {print $0}' CHANGELOG.md >> tmp_CHANGELOG.md
 
       - name: Create GitHub Release
         run: |
           gh release create "${{ env.new_version }}" \
             --title "${{ env.new_version }}" \
-            --notes "${{ env.release_notes }}" \
+            --notes-file tmp_CHANGELOG.md \
             --latest \
             --target main
         env:
