--- a/.github/workflows/finalize_release.yml
+++ b/.github/workflows/finalize_release.yml
@@ -84,6 +84,7 @@ jobs:
         run: |
           git pull
           awk '/^## \[${{ env.new_version }}\]/ {flag=1; next} /^## \[/{if (flag) exit} flag {print $0}' CHANGELOG.md >> tmp_CHANGELOG.md
+          sleep 10
 
       - name: Create GitHub Release
         run: |
