--- a/.github/workflows/check_changelog.yml
+++ b/.github/workflows/check_changelog.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Check for changes in CHANGELOG.md
         run: |
-          if git diff --exit-code HEAD^ HEAD -- CHANGELOG.md; then
+          if git diff --exit-code origin/develop...HEAD -- CHANGELOG.md; then
             echo "No changes detected in CHANGELOG.md"
             exit 1
           else
