--- a/.github/workflows/finalize_release.yml
+++ b/.github/workflows/finalize_release.yml
@@ -73,11 +73,15 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Wait for PR Checks
+        run: |
+          gh pr checks ${{ env.release_pr_number }} --watch
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Merge release PR
         run: |
-          gh pr merge ${{ env.release_pr_number }} \
-          --merge \
-          --auto
+          gh pr merge ${{ env.release_pr_number }} --merge
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -118,11 +122,15 @@ jobs:
 
           echo "pr_number=$pr_number" >> $GITHUB_ENV
 
+      - name: Wait for PR Checks
+        run: |
+          gh pr checks ${{ env.pr_number }} --watch
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Merge PR
         run: |
-          gh pr merge ${{ env.pr_number }} \
-          --merge \
-          --auto
+          gh pr merge ${{ env.pr_number }} --merge
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
