--- a/.github/workflows/finalize_release.yml
+++ b/.github/workflows/finalize_release.yml
@@ -122,7 +122,7 @@ jobs:
 
           echo "pr_number=$pr_number" >> $GITHUB_ENV
 
-      - name: Wait for PR Checks
+      - name: Wait for PR Checks to Pass
         run: |
           gh pr checks ${{ env.pr_number }} --watch
         env:
