--- a/.github/workflows/finalize_release.yml
+++ b/.github/workflows/finalize_release.yml
@@ -140,6 +140,12 @@ jobs:
 
           echo "pr_number=$pr_number" >> $GITHUB_ENV
 
+      - name: Sleep
+        run: |
+          #Sometimes Github takes several seconds for checks to start,
+          #so we sleep so the merge doesn't happen before checks start.
+          sleep 30
+
       - name: Wait for PR Checks to Pass
         run: |
           checks_response=$(gh pr checks ${{ env.pr_number }} 2>&1) || \
