--- a/.github/workflows/finalize_release.yml
+++ b/.github/workflows/finalize_release.yml
@@ -8,22 +8,6 @@ on:
         required: true
         type: string
 
-permissions:
-  actions: write
-  attestations: write
-  checks: write
-  contents: write
-  deployments: write
-  id-token: write
-  issues: write
-  discussions: write
-  packages: write
-  pages: write
-  pull-requests: write
-  repository-projects: write
-  security-events: write
-  statuses: write
-
 jobs:
   finalize_release:
     runs-on: ubuntu-latest
@@ -75,7 +59,6 @@ jobs:
           fi
 
           echo "release_pr_number=$release_pr_number" >> $GITHUB_ENV
-          echo "release_branch=$release_branch" >> $GITHUB_ENV
           echo "new_version=$new_version" >> $GITHUB_ENV
         env:
           GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
@@ -99,7 +82,9 @@ jobs:
 
       - name: Merge release PR
         run: |
-          gh pr merge ${{ env.release_pr_number }} --merge
+          gh pr merge ${{ env.release_pr_number }} \
+          --merge \
+          --delete-branch
         env:
           GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
 
@@ -168,7 +153,3 @@ jobs:
           gh pr merge ${{ env.pr_number }} --merge
         env:
           GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
-
-      - name: Delete release branch
-        run: |
-          git push origin --delete "${{ env.release_branch }}"
